Atualização completa do projeto - sincronização com estado local

--- a/shopmi/.gitignore
+++ b/shopmi/.gitignore
@@ -24,11 +24,12 @@
 .DS_Store
 *.pem
 
-# debug
+# debug & logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+*.log
 
 # env files (can opt-in for committing if needed)
 .env*
@@ -58,6 +59,7 @@ temp-repo/
 
 # Documentation with sensitive examples (setup guides)
 AUTH_SETUP.md
+GOOGLE_OAUTH_SETUP.md
 SECURITY_AUDIT_REPORT.md
 YAMPI_TEST_DOMAINS.md
 YAMPI_DOMAIN_TEST.md
