--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mercadopago/sdk-react": "^1.0.7",
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-navigation-menu": "^1.2.10",
     "ag-grid-community": "^34.1.0",
